--- a/.github/workflows/templates/dotnet-ci.yml
+++ b/.github/workflows/templates/dotnet-ci.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: '10.0.x'
+        global-json-file: global.json
         dotnet-quality: 'preview'
         
     - name: Restore Dependencies
