feat: implement monorepo ci gate for unified branch protection

--- a/.github/workflows/backend-notification-service.yml
+++ b/.github/workflows/backend-notification-service.yml
@@ -1,7 +1,8 @@
 name: Notification Service CI
 
 on:
-  pull_request:
+  workflow_call: # Allow being called by the Gate
+  pull_request: # Keep independent trigger for direct feedback loop (optional, but good for dev experience)
     paths:
       - 'src/backend/notification-service/**'
       - 'Directory.Build.props'
