--- a/.github/workflows/notification-service-ci.yml
+++ b/.github/workflows/notification-service-ci.yml
@@ -3,11 +3,34 @@ name: Notification Service CI
 on:
   pull_request:
     branches: [ master ]
+  push:
+    branches: [ master ]
+    paths:
+      - 'src/backend/notification-service/**'
+      - '.github/workflows/notification-service-ci.yml'
+      - '.github/workflows/template-dotnet-ci.yml'
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      service: ${{ steps.filter.outputs.service }}
+    steps:
+    - uses: dorny/paths-filter@v2
+      id: filter
+      with:
+        filters: |
+          service:
+            - 'src/backend/notification-service/**'
+            - '.github/workflows/notification-service-ci.yml'
+            - '.github/workflows/template-dotnet-ci.yml'
+
   ci:
+    needs: changes
     uses: ./.github/workflows/template-dotnet-ci.yml
     with:
       service_name: 'NotificationService'
       project_path: 'src/backend/notification-service'
       coverage_threshold: 80
+      # If changes detected (true), bypass is false. If no changes (false), bypass is true.
+      bypass_checks: ${{ needs.changes.outputs.service != 'true' }}
