chore: rename ci job to quality-gate to resolve ruleset conflict

--- a/.github/workflows/notification-service-ci.yml
+++ b/.github/workflows/notification-service-ci.yml
@@ -23,7 +23,7 @@ jobs:
           service:
             - 'src/backend/notification-service/**'
 
-  ci:
+  quality-gate:
     needs: changes
     uses: ./.github/workflows/template-dotnet-ci.yml
     with:
