refactor(notification): address PR #47 review feedback
- Move TelegramSettings to Api/Models/Settings namespace
- Make TelegramProvider class sealed
- Refactor tests to use in-memory configuration instead of Configure<T>
- Tests now rely on real DI and only inject ITelegramMessenger mock
- Explicit TelegramProvider registration in tests (not in default DI until Phase 2)
- Add placeholder Telegram config to appsettings.json
- Coverage: 96.75% (exceeds 80% threshold)

--- a/src/backend/notification-service/NotificationService.Tests/NotificationService.Tests.csproj
+++ b/src/backend/notification-service/NotificationService.Tests/NotificationService.Tests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <IsTestProject>true</IsTestProject>
     <IsPackable>false</IsPackable>
+    <RunSettingsFilePath>$(MSBuildThisFileDirectory)..\coverage.runsettings</RunSettingsFilePath>
   </PropertyGroup>
 
   <ItemGroup>
