--- a/src/backend/notification-service/NotificationService/appsettings.json
+++ b/src/backend/notification-service/NotificationService/appsettings.json
@@ -10,6 +10,10 @@
     "ServiceName": "NotificationService",
     "MaxRetryAttempts": 3
   },
+  "Telegram": {
+    "BotToken": "placeholder-token",
+    "ChatId": "placeholder-chat-id"
+  },
   "Serilog": {
     "MinimumLevel": "Information",
     "WriteTo": [
