style: fix line endings and formatting issues identified by CI

--- a/src/backend/notification-service/NotificationService/appsettings.json
+++ b/src/backend/notification-service/NotificationService/appsettings.json
@@ -11,13 +11,15 @@
     "MaxRetryAttempts": 3
   },
   "Telegram": {
-    "BotToken": "placeholder-token",
-    "ChatId": "placeholder-chat-id"
+    "BotToken": "",
+    "ChatId": ""
   },
   "Serilog": {
     "MinimumLevel": "Information",
     "WriteTo": [
-      { "Name": "Console" }
+      {
+        "Name": "Console"
+      }
     ]
   }
 }
