--- a/src/backend/notification-service/NotificationService/NotificationService.csproj
+++ b/src/backend/notification-service/NotificationService/NotificationService.csproj
@@ -5,6 +5,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.12.11" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Telegram.Bot" Version="22.8.1" />
   </ItemGroup>
   <ItemGroup>
     <InternalsVisibleTo Include="NotificationService.Tests" />
