--- a/src/backend/notification-service/NotificationService/appsettings.Development.json
+++ b/src/backend/notification-service/NotificationService/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Telegram": {
+    "BotToken": "980338252:AAER2n2uyy9yAhtdMX92FNSQEWKdzBjL9r0",
+    "ChatId": "373282818"
   }
 }
