feat(notification-service): add CD Phase 1 - service preparation
- Add /health endpoint for Railway deployment verification
- Add Version property (1.0.0) for semantic versioning
- Create initial CHANGELOG.md for auto-generated releases
- Configure Serilog JSON formatter for Railway Log Explorer
- Add Serilog enrichers for structured logging context

--- a/src/backend/notification-service/NotificationService/appsettings.json
+++ b/src/backend/notification-service/NotificationService/appsettings.json
@@ -15,11 +15,20 @@
     "ChatId": ""
   },
   "Serilog": {
-    "MinimumLevel": "Information",
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
     "WriteTo": [
       {
-        "Name": "Console"
+        "Name": "Console",
+        "Args": {
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
       }
-    ]
+    ],
+    "Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"]
   }
 }
