fix(ci): add checkout step for paths-filter on push events

--- a/.github/workflows/notification-service-ci.yml
+++ b/.github/workflows/notification-service-ci.yml
@@ -16,6 +16,7 @@ jobs:
     outputs:
       service: ${{ steps.filter.outputs.service }}
     steps:
+    - uses: actions/checkout@v4
     - uses: dorny/paths-filter@v2
       id: filter
       with:
