--- a/.github/workflows/template-dotnet-ci.yml
+++ b/.github/workflows/template-dotnet-ci.yml
@@ -18,6 +18,15 @@ on:
         type: boolean
         default: false
         description: "If true, skips build/test steps but reports success"
+      railway_service_id:
+        required: false
+        type: string
+        description: "The Railway Service ID to deploy to. If empty, deployment is skipped."
+    secrets:
+      RAILWAY_TOKEN:
+        required: false
+        description: "The Railway Project Token."
+
 
 jobs:
   validate:
@@ -77,3 +86,27 @@ jobs:
             exit 1
           fi
           echo "✅ Coverage $COVERAGE% meets threshold"
+
+  deploy:
+    name: deploy
+    needs: [validate]
+    if: ${{ inputs.railway_service_id != '' && github.ref == 'refs/heads/master' && github.actor != 'github-actions[bot]' }}
+    runs-on: ubuntu-latest
+    concurrency:
+      group: deploy-${{ inputs.service_name }}
+      cancel-in-progress: false
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Needed for automated versioning and tags later
+
+      - name: Install Railway CLI
+        run: npm i -g @railway/cli
+
+      - name: Deploy to Railway
+        run: railway up --service ${{ inputs.railway_service_id }} -d
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+        working-directory: ${{ inputs.project_path }}
+
