fix(cd): move railway_service_id to secrets to fix workflow validation

--- a/.github/workflows/notification-service-ci.yml
+++ b/.github/workflows/notification-service-ci.yml
@@ -31,6 +31,9 @@ jobs:
         filters: |
           service:
             - 'src/backend/notification-service/**'
+            - '.github/workflows/notification-service-ci.yml'
+            - '.github/workflows/template-dotnet-ci.yml'
+
 
   quality-gate:
     needs: changes
@@ -41,6 +44,6 @@ jobs:
       coverage_threshold: 80
       # If changes detected (true), bypass is false. If no changes (false), bypass is true.
       bypass_checks: ${{ needs.changes.outputs.service != 'true' }}
-      railway_service_id: ${{ secrets.RAILWAY_SERVICE_ID }}
     secrets: inherit
+
 
