--- a/.github/workflows/notification-service-ci.yml
+++ b/.github/workflows/notification-service-ci.yml
@@ -44,6 +44,8 @@ jobs:
       coverage_threshold: 80
       # If changes detected (true), bypass is false. If no changes (false), bypass is true.
       bypass_checks: ${{ needs.changes.outputs.service != 'true' }}
+      enable_deploy: true
     secrets: inherit
+
 
 
