--- a/.github/workflows/notification-service-ci.yml
+++ b/.github/workflows/notification-service-ci.yml
@@ -45,7 +45,9 @@ jobs:
       # If changes detected (true), bypass is false. If no changes (false), bypass is true.
       bypass_checks: ${{ needs.changes.outputs.service != 'true' }}
       enable_deploy: true
+      railway_service_name: 'notification-service'
     secrets: inherit
+
 
 
 
