fix(logs): optimize JSON structure for Railway log viewer
Switched to Serilog.Expressions to output a standard JSON format where the message is in a 'message' field instead of '@m'. This ensures Railway's log aggregator correctly identifies and displays the message in the UI.

--- a/src/backend/notification-service/NotificationService/appsettings.json
+++ b/src/backend/notification-service/NotificationService/appsettings.json
@@ -25,7 +25,10 @@
       {
         "Name": "Console",
         "Args": {
-          "formatter": "Serilog.Formatting.Compact.RenderedCompactJsonFormatter, Serilog.Formatting.Compact"
+          "formatter": {
+            "type": "Serilog.Templates.ExpressionTemplate, Serilog.Expressions",
+            "template": "{ {timestamp: @t, level: @l, message: @m, ..@p} }\n"
+          }
         }
       }
     ],
