--- a/src/backend/notification-service/NotificationService/NotificationService.csproj
+++ b/src/backend/notification-service/NotificationService/NotificationService.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
+    <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="3.0.0" />
     <PackageReference Include="Telegram.Bot" Version="22.8.1" />
   </ItemGroup>
