--- a/.github/workflows/template-dotnet-ci.yml
+++ b/.github/workflows/template-dotnet-ci.yml
@@ -27,15 +27,14 @@ on:
         required: false
         type: string
         description: "The name of the service in Railway (e.g., notification-service)."
+      railway_service_id:
+        required: false
+        type: string
+        description: "The Railway Service ID. If empty, deployment is skipped."
     secrets:
-
-
       RAILWAY_TOKEN:
         required: false
         description: "The Railway Project Token."
-      RAILWAY_SERVICE_ID:
-        required: false
-        description: "The Railway Service ID. If empty, deployment is skipped."
 
 
 
@@ -164,7 +163,7 @@ jobs:
             echo "🔍 Attempting to fetch latest deployment for service..."
             
             # Fallback: Query latest deployment via GraphQL API
-            LATEST_DEPLOY_QUERY='{"query": "query { service(id: \"'${{ secrets.RAILWAY_SERVICE_ID }}'\") { latestDeployment { id status } } }"}'
+            LATEST_DEPLOY_QUERY='{"query": "query { service(id: \"'${{ inputs.railway_service_id }}'\") { latestDeployment { id status } } }"}'
             LATEST_DEPLOY_RESPONSE=$(curl -s -X POST https://backboard.railway.com/graphql/v2 \
               -H "Project-Access-Token: ${{ secrets.RAILWAY_TOKEN }}" \
               -H "Content-Type: application/json" \
