--- a/.github/workflows/template-dotnet-ci.yml
+++ b/.github/workflows/template-dotnet-ci.yml
@@ -112,6 +112,23 @@ jobs:
         with:
           fetch-depth: 0 # Needed for automated versioning and tags later
 
+      - name: Bump Version
+        id: bump
+        run: bash .github/scripts/bump-version.sh "${{ inputs.railway_service_name }}" "${{ inputs.project_path }}"
+
+      - name: Generate Changelog
+        if: steps.bump.outputs.needs_bump == 'true'
+        run: bash .github/scripts/generate-changelog.sh "${{ inputs.railway_service_name }}" "${{ steps.bump.outputs.updated_version }}" "${{ inputs.project_path }}"
+
+      - name: Commit and Push CI changes
+        if: steps.bump.outputs.needs_bump == 'true'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add "${{ inputs.project_path }}"
+          git commit -m "chore(${{ inputs.railway_service_name }}): release v${{ steps.bump.outputs.updated_version }} [skip ci]"
+          git push
+
       - name: Prepare Monorepo Context
         run: |
           # Inject shared monorepo properties
@@ -250,6 +267,12 @@ jobs:
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
         working-directory: ${{ inputs.project_path }}
+
+      - name: Create and Push Git Tag
+        if: steps.bump.outputs.needs_bump == 'true'
+        run: |
+          git tag "${{ inputs.railway_service_name }}/v${{ steps.bump.outputs.updated_version }}"
+          git push origin "${{ inputs.railway_service_name }}/v${{ steps.bump.outputs.updated_version }}"
 
 
 
